tests/negative/gold/constructor_receiver_test.gold
tests/negative/constructor_receiver_test.toit:21:4: error: Class 'A' does not have any static member or constructor with name 'member'
  A.member
   ^
tests/negative/constructor_receiver_test.toit:22:4: error: Class 'B' does not have any static member or constructor with name 'member'
  B.member
   ^
tests/negative/constructor_receiver_test.toit:24:8: error: Class 'A' does not have any static member or constructor with name 'member'
  pre.A.member
       ^
tests/negative/constructor_receiver_test.toit:25:8: error: Class 'B' does not have any static member or constructor with name 'member'
  pre.B.member
       ^
tests/negative/constructor_receiver_test.toit:33:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
